@@ -1,3 +1,8 @@
+2006-03-16  Julien Puydt  <jpuydt@free.fr>
+
+	* src/gui/addressbook.cpp: Made some variables more explicit to be
+	able to work properly on #334685.
+
 2006-03-14  Damien Sandras  <dsandras@gnome.org>
 
 	* configure.in: Incremented version number to 2.0.1. Incremented
